--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
+html, body {
+  margin: 0;
+  height: 100%;
+}
+
 #scene-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
+  width: 100%;
+  height: 100%;
+  display: block;
+}
