--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,37 @@
 html, body {
-  margin: 0;
+  margin: 0px;
   height: 100%;
+  font-size: 10px;
+  font-family: sans-serif;
 }
 
-#scene-container {
+#container {
+   position: relative;
+   width: 100vw;
+   height: 100vh;
+   overflow: hidden;
+}
+
+#scene {
   width: 100%;
   height: 100%;
   display: block;
+}
+
+.row {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#description {
+  font-size: 1.5em;
+  margin: 0 15px;
+}
+
+#footer {
+  bottom: 0;
 }
