--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,19 @@
+/* RGB */
+:root {
+  --main-text-color: rgba(229, 229, 229, 1);
+  --main-bg-color: rgba(70, 73, 76, 1);
+  --main-accent-color: rgba(246, 189, 96, 1);
+  --main-success-color: rgba(132, 165, 157, 1);
+  --main-fail-color: rgba(242, 132, 130, 1);
+}
+
 html, body {
   margin: 0px;
   height: 100%;
   font-size: 10px;
-  font-family: sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  color: var(--main-text-color);
+  background-color: var(--main-bg-color);
 }
 
 #container {
@@ -29,9 +40,44 @@ html, body {
 
 #description {
   font-size: 1.5em;
-  margin: 0 15px;
+  line-height: 1.45em;
+  margin: 0 40px;
+}
+
+.float-40 {
+  top: 40%;
+}
+.float-65 {
+  top: 65%;
 }
 
 #footer {
   bottom: 0;
+  font-size: 1.5em;
+}
+
+input[type=text] {
+  font-size: 1.5em;
+  height: 20px;
+  width: 250px;
+  border: 1px var(--main-accent-color) solid;
+  /* background-color: var(--main-accent-color); */
+  color: var(--main-accent-color);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+#email-sign {
+  display: block;
+  width: 200px;
+  height: 50px;
+  border-radius: 0px 0px 20px 20px;
+  background-color: var(--main-accent-color);
+}
+
+#email-sign p {
+  font-size: 1.1em;
+  line-height: 1.1em;
+  margin: 5px 10px;
+  text-align: center;
 }
