--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,7 @@ html, body {
   width: 100%;
   height: 100%;
   display: block;
+  margin-top: 160px;
 }
 
 .row {
@@ -38,46 +39,75 @@ html, body {
   align-items: center;
 }
 
-#description {
-  font-size: 1.5em;
-  line-height: 1.45em;
-  margin: 0 40px;
+#submit {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  background-color: var(--main-accent-color);
 }
 
-.float-40 {
-  top: 40%;
+.justified {
+  text-align: justify;
+  text-justify: distribute;
+  letter-spacing: 2.5px;
+}
+
+.justified-more {
+  letter-spacing: -2px;
+}
+
+.letter-space {
+  letter-spacing: 3.2px;
+}
+
+#description {
+  font-size: 3em;
+  line-height: 1.45em;
+  margin: 0 40px;
+  /* box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2); */
+  font-family: 'VT323', monospace;
+  text-align: justify;
+}
+
+.float-50 {
+  top: 78%;
 }
 .float-65 {
-  top: 65%;
+  top: 8%;
 }
 
 #footer {
   bottom: 0;
-  font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 input[type=text] {
   font-size: 1.5em;
   height: 20px;
-  width: 250px;
+  width: 220px;
   border: 1px var(--main-accent-color) solid;
   /* background-color: var(--main-accent-color); */
   color: var(--main-accent-color);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  border-radius: 3px;
 }
 
 #email-sign {
   display: block;
   width: 200px;
   height: 50px;
-  border-radius: 0px 0px 20px 20px;
+  border-radius: 20px;
   background-color: var(--main-accent-color);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  padding:4px;
+  margin-top: 30px;
 }
 
 #email-sign p {
-  font-size: 1.1em;
+  font-size: 1.3em;
   line-height: 1.1em;
-  margin: 5px 10px;
+  margin: 8px 10px;
   text-align: center;
+  font-weight: bold;
 }
