--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 html, body {
   margin: 0px;
   height: 100%;
+  width: 100%;
   font-size: 10px;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--main-text-color);
@@ -44,12 +45,15 @@ html, body {
 }
 
 #submit {
-  display: inline-block;
+  display: flex;
   width: 30px;
-  height: 27px;
+  height: 25px;
   background-color: var(--main-accent-color);
+  border: 0px;
   border-radius: 0px 3px 3px 0px;
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  align-items: center;
+  justify-content: center;
 }
 
 .justified {
@@ -87,15 +91,21 @@ html, body {
   font-size: 1.3em;
 }
 
+.submit > i {
+  color: var(--main-text-color);
+  font-size: 2em;
+}
+
 input[type=text] {
   font-size: 1.5em;
   height: 23px;
   width: 220px;
-  border: 1px var(--main-accent-color) solid;
-  /* background-color: var(--main-accent-color); */
-  color: var(--main-accent-color);
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  border: 0px;
+  background-color: var(--main-accent-color);
+  color: var(--main-text-color);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
   border-radius: 3px 0px 0px 3px;
+  padding-left: 5px;
 }
 
 #email-sign {
@@ -104,7 +114,7 @@ input[type=text] {
   height: 50px;
   border-radius: 20px;
   background-color: var(--main-accent-color);
-  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
   padding:4px;
   margin-top: 30px;
 }
