--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ html, body {
   width: 100%;
   height: 100%;
   display: block;
-  margin-top: 160px;
+  margin-top: 130px;
 }
 
 .row {
@@ -38,22 +38,6 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.input-row {
-  display: flex;
-}
-
-#submit {
-  display: flex;
-  width: 30px;
-  height: 25px;
-  background-color: var(--main-accent-color);
-  border: 0px;
-  border-radius: 0px 3px 3px 0px;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-  align-items: center;
-  justify-content: center;
 }
 
 .justified {
@@ -71,7 +55,7 @@ html, body {
 }
 
 #description {
-  font-size: 3em;
+  font-size: 2.5em;
   line-height: 1.45em;
   margin: 0 40px;
   /* box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2); */
@@ -80,19 +64,32 @@ html, body {
 }
 
 .float-50 {
-  top: 78%;
+  top: 75%;
 }
 .float-65 {
   top: 8%;
 }
 
-#footer {
-  bottom: 0;
-  font-size: 1.3em;
+
+
+.input-row {
+  display: flex;
+  /* box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2); */
 }
 
-.submit > i {
-  color: var(--main-text-color);
+#submit {
+  display: flex;
+  width: 30px;
+  height: 25px;
+  background-color: var(--main-text-color);
+  border: 0px;
+  border-radius: 0px 3px 3px 0px;
+  align-items: center;
+  justify-content: center;
+}
+
+#submit i {
+  color: var(--main-accent-color);
   font-size: 2em;
 }
 
@@ -101,28 +98,49 @@ input[type=text] {
   height: 23px;
   width: 220px;
   border: 0px;
-  background-color: var(--main-accent-color);
-  color: var(--main-text-color);
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  background-color: var(--main-text-color);
+  color: var(--main-accent-color);
   border-radius: 3px 0px 0px 3px;
   padding-left: 5px;
 }
 
+input[type=text]::placeholder {
+  color: rgba(70, 73, 76, 0.83);
+}
+
 #email-sign {
-  display: block;
-  width: 200px;
-  height: 50px;
-  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  /* border-radius: 20px; */
   background-color: var(--main-accent-color);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
-  padding:4px;
-  margin-top: 30px;
+  /* padding:4px; */
+  /* margin-top: 30px; */
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 #email-sign p {
   font-size: 1.3em;
   line-height: 1.1em;
-  margin: 8px 10px;
+  margin: 0px 40px;
   text-align: center;
   font-weight: bold;
+}
+
+#footer {
+  bottom: 10px;
+  font-size: 1.3em;
+  height: 5%;
+  justify-content: space-between;
+}
+
+#socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 50%;
 }
