--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ html, body {
   font-size: 2em;
 }
 
-input[type=text] {
+input[type=email] {
   font-size: 1.5em;
   height: 23px;
   width: 220px;
@@ -104,7 +104,7 @@ input[type=text] {
   padding-left: 5px;
 }
 
-input[type=text]::placeholder {
+input[type=email]::placeholder {
   color: rgba(70, 73, 76, 0.83);
 }
 
