--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ html, body {
 }
 
 .float-50 {
-  top: 75%;
+  bottom: 0;
 }
 .float-65 {
   top: 8%;
@@ -74,7 +74,7 @@ html, body {
   display: none;
 }
 
-.input-row {
+.email-row {
   display: flex;
   /* box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2); */
 }
@@ -114,7 +114,7 @@ input[type=email]::placeholder {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100px;
+  height: 120px;
   /* border-radius: 20px; */
   background-color: var(--main-accent-color);
   box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
@@ -144,7 +144,8 @@ input[type=email]::placeholder {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  width: 50%;
+  width: 100%;
+  font-size: 1.5em;
 }
 
 #caret {
