--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 /* RGB */
 :root {
   --main-text-color: rgba(229, 229, 229, 1);
-  --main-bg-color: rgba(70, 73, 76, 1);
+  --main-bg-color: rgb(27, 27, 27);
   --main-accent-color: rgba(246, 189, 96, 1);
   --main-success-color: rgba(132, 165, 157, 1);
   --main-fail-color: rgba(242, 132, 130, 1);
@@ -20,9 +20,41 @@ html, body {
 #container {
    position: relative;
    width: 100vw;
-   height: 100vh;
+   height: 100%;
    overflow: hidden;
 }
+
+.logo-container {
+  /* position: fixed;
+  top: 0;
+  height: 200px; */
+}
+
+.socials-container {
+  height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  text-align: center;
+}
+
+.email-container {
+}
+
+.message-container {
+  padding-top: 15px;
+}
+
+.socials-container > a {
+  height: 60px;
+  width: 60px;
+}
+
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+.material-icons.md-60 { font-size: 60px; }
 
 #scene {
   width: 100%;
@@ -55,23 +87,12 @@ html, body {
 }
 
 #description {
-  font-size: 2.5em;
+  font-size: 2em;
   line-height: 1.45em;
-  margin: 0 40px;
-  /* box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.2); */
+  margin: 0 50px;
+  /* box-shadow: 6px 12px 12px 15px rgba(0, 0, 0, 0.2); */
   font-family: 'VT323', monospace;
   text-align: justify;
-}
-
-.float-50 {
-  bottom: 0;
-}
-.float-65 {
-  top: 8%;
-}
-
-.hide {
-  display: none;
 }
 
 .email-row {
@@ -116,8 +137,8 @@ input[type=email]::placeholder {
   width: 100%;
   height: 120px;
   /* border-radius: 20px; */
-  background-color: var(--main-accent-color);
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2);
+  /* background-color: var(--main-accent-color); */
+  /* box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2); */
   /* padding:4px; */
   /* margin-top: 30px; */
   justify-content: space-evenly;
@@ -132,11 +153,16 @@ input[type=email]::placeholder {
   font-weight: bold;
 }
 
-#footer {
-  bottom: 10px;
-  font-size: 1.3em;
-  height: 5%;
-  justify-content: space-between;
+.footer-container {
+  position: fixed;
+  width: 40%;
+  bottom: 0;
+  font-size: 1.5em;
+  padding-left: 12px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 #socials {
@@ -146,6 +172,10 @@ input[type=email]::placeholder {
   justify-content: space-evenly;
   width: 100%;
   font-size: 1.5em;
+}
+
+#socials a,a:hover,a:visited,a:active {
+  color: white;
 }
 
 #caret {
