--- a/src/index.css
+++ b/src/index.css
@@ -104,6 +104,17 @@ html, body {
   font-size: 2em;
 }
 
+button {
+  background:none;
+  border:none;
+  padding:0;
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
 .icon-link {
   display: block;
 }
